# SpaceEnvir

./: CMakeLists.txt  README.md
include/ai/: AIDataPacket.cuh
include/components/: Body.cuh
include/core/: ECS.cuh  dataChecker.cuh  device_data_manager.cuh  physics_components.cuh  physics_system.cuh  simulation_manager.cuh
include/ecs/: ComponentManager.cuh  ECS.cuh  EntityManager.cuh  SystemManager.cuh
include/physics/: Body.cuh  NetworkingCLient.h  physicsEngine.cuh  physics_engine.cuh  solar_system_factory.cuh  spaceship.cuh
include/physics/visualisation/: opengl_renderer.cuh
include/system/: PhysicsSystem.cuh  SpaceshipSystem.cuh
src/: main.cu  test_physics_engine.cu
src/ecs/: ECSCoordinator.cu  ecs.cu
src/physics/: Body.cu  physicsEngine.cu  physics_engine.cu
src/physics/visualisation/: opengl_renderer.cu
test/: teswe.cpp
